--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,35 +3,45 @@ layout: default
 ---
 
 <div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
 
-  {{ content }}
-
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">Recent Posts</h2>
-    <ul class="post-list">
+  <div class="blog-posts">
+    {%- if site.posts.size > 0 -%}
+    <h2 class="post-list-heading">Blog Posts</h2>
+    <ul class="post-list blog-posts-list">
       {%- for post in site.posts -%}
       <li>
-        <h3>
+        <!-- Date -->
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
+
+        <!-- Title -->
+        <h3 class="blog-post-header-link">
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
         </h3>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        {%- if post.summary -%}
-            <p><i>{{ post.summary }}</i></p>
+
+        <!-- Tags -->
+        {%- if post.tags -%}
+        <div class="tags">
+          {%- for tag in post.tags -%}
+          <span class="tag">
+            {{ tag }}
+          </span>
+          {%- endfor -%}
+        </div>
         {%- endif -%}
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
+
+        <!-- Summary -->
+        {%- if post.summary -%}
+        <p><i>{{ post.summary }}</i></p>
         {%- endif -%}
       </li>
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-  {%- endif -%}
+    <p class="rss-subscribe">subscribe <a href="{{ " /feed.xml" | relative_url }}">via RSS</a></p>
+    {%- endif -%}
+  </div>
 
 </div>
