--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,10 +10,10 @@ layout: default
     <ul class="post-list blog-posts-list">
       {%- for post in site.posts -%}
       <li>
+        {%- if post.category contains 'blog' -%}
         <!-- Date -->
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
+        <span class="post-meta blog-post-date">{{ post.date | date: date_format }}</span>
 
         <!-- Title -->
         <h3 class="blog-post-header-link">
@@ -23,11 +23,11 @@ layout: default
 
           <!-- Icon -->
           {%- if post.category contains 'blender' -%}
-          <img class="blog-post-icon" src="{{ '/assets/blender.svg' | relative_url }}" alt="Blender Icon"/>
+          <img class="blog-post-icon" src="{{ '/assets/blender.svg' | relative_url }}" alt="Blender Icon" />
           {%- elsif post.category contains 'engineer' -%}
-          <img class="blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon"/>
+          <img class="blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon" />
           {%- elsif post.category contains 'game dev' -%}
-          <img class="blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon"/>
+          <img class="blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon" />
           {%- endif -%}
         </h3>
 
@@ -46,6 +46,43 @@ layout: default
         {%- if post.summary -%}
         <p><i>{{ post.summary }}</i></p>
         {%- endif -%}
+
+        {%- else -%}
+
+        <!-- Title -->
+        <h3 class="mini-blog-post-header-link">
+          <a class="mini-blog-post-link" href="{{ post.url | relative_url }}">
+            {{ post.title | escape }}
+          </a>
+
+          <!-- Icon -->
+          {%- if post.category contains 'blender' -%}
+          <img class="mini-blog-post-icon" src="{{ '/assets/blender.svg' | relative_url }}" alt="Blender Icon" />
+          {%- elsif post.category contains 'engineer' -%}
+          <img class="mini-blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon" />
+          {%- elsif post.category contains 'game dev' -%}
+          <img class="mini-blog-post-icon" src="{{ '/assets/code.svg' | relative_url }}" alt="Code Icon" />
+          {%- endif -%}
+        </h3>
+
+        <!-- Tags -->
+        {%- if post.tags -%}
+        <div class="mini-tags">
+          {%- for tag in post.tags -%}
+          <span class="tag">
+            {{ tag }}
+          </span>
+          {%- endfor -%}
+        </div>
+        {%- endif -%}
+
+        <!-- Summary -->
+        {%- if post.summary -%}
+        <p><i>{{ post.summary }}</i></p>
+        {%- endif -%}
+
+        {%- endif -%}
+
       </li>
       {%- endfor -%}
     </ul>
