--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,9 +13,13 @@
   width: 100%;
 }
 
+.blog-post-date {
+  display: block;
+}
+
 .blog-post-header-link {
   margin-bottom: 0;
-  display: flex;
+  display: inline-flex;
 }
 
 .blog-post-icon {
@@ -24,14 +28,35 @@
   margin-left: 5px;
 }
 
+.mini-blog-post-header-link {
+  display: inline-block;
+  margin-bottom: 0.1rem;
+}
+
+.mini-blog-post-link {
+  font-size: 1rem;
+  display: inline-block;
+}
+
+.mini-tags {
+  display: inline-block;
+}
+
+.mini-blog-post-icon {
+  display: inline-block;
+  width: 1rem;
+  margin-left: 5px;
+}
+
 .tags {
+  display: inline-block;
   margin-bottom: 0.1rem;
 }
 
 .tag {
   display: inline-block;
   margin-right: 0.5rem;
-  padding: 0.25rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   border-radius: 0.5rem;
   background-color: #eee;
   color: #333;
